--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
         <meta name="description" content="Lucy Morley is a British artist and designer based in Cornwall, England. Specialises in drawings, prints, large-scale murals, collaborative projects.">
 
-        <link rel="stylesheet" href="css/main3.css">	
+        <link rel="stylesheet" href="css/main.css">	
         <script src="live.js"></script>
     </head>
     <body>
