--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
 
         <div class="grid-container" id="projects-grid">
             <a href="/projects/botanicals">
-                <img src="img/botanicals-1.jpg" alt=Botanicals></img>
+                <img src="img/small_botanicals-1.jpg" alt=Botanicals></img>
                 <p class="project-hover-text">Botanicals</p>
             </a>
-            <img src="img/botanicals-1.jpg" alt=Botanicals></img>
-            <img src="img/botanicals-1.jpg" alt=Botanicals></img>
-            <img src="img/botanicals-1.jpg" alt=Botanicals></img>
+            <img src="img/small_botanicals-1.jpg" alt=Botanicals></img>
+            <img src="img/small_botanicals-1.jpg" alt=Botanicals></img>
+            <img src="img/small_botanicals-1.jpg" alt=Botanicals></img>
         </div>
     </body>
 </html>
